platform/traefik/traefik-dashboard/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-https
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`traefik.kfirs.com`)
      middlewares:
        - name: google-auth
          namespace: traefik
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: traefik-kfirs-com-tls
